# minado

./: .gitignore  README.md
api/: README.md  package.json  server.js
api/daemon/: index.js
api/nexajs/: index.js
api/public/: index.html
api/routes/: admin.js  core.js  magiclink.js  notifs.js  orders.js  rpc.js  sessions.js  shares.js  sideshift.js  users.js
api/shares/: package.json  server.js
api/stratum/: handler.js  package.json  server.js
api/telemetry/: handler.js  package.json
api/templates/: html.js  plaintext.js
daemon/: index.js  package.json
daemon/src/: createGroup.js
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
docs/blog/: authors.yml
graphql/: Dockerfile  package.json  server.js
manager/: README.md  package.json
minadodb/: Dockerfile  README.md  docker-compose.yml  package.json
miner/: Cargo.toml  README.md
miner/src/: address.rs  lib.rs  main.rs  utils.rs
miner/src/crypto/: mod.rs
miner/src/libs/: bech32.rs
miner/src/utils/: mod.rs
miner/tests/: address.rs
mobile/: README.md  package.json
rocksdb/: README.md  docker-compose.yml  package.json
stratum/: .eslintrc.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  index-fixed-diff.js  index.js  install.sh  package.json  sample.account.config.js  sample.pool.config.js  server.js  webpack.config.js
web/: .gitignore  Dockerfile  README.md  docker-compose.yml  nuxt.config.js  package.json
web-static/: .eslintrc.js  README.md  nuxt.config.js  package.json
web/src/: App.vue  (+2 more)
widget/: README.md  config.json  index.html  index.js
(+418 files in other folders)
