[package]
name = "nexa-rocks-miner"
version = "22.10.30"
authors = ["Ava's DAO <support@avasdao.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
digest = "0.10.3"
double-sha256 = { git = "https://github.com/agostbiro/double-sha256.git", rev = "cd163ce" }
hex = "0.4.3"
k256 = "0.11.2"
rand = "0.8.3"
rust-schnorr = { git = "https://github.com/arik-so/rust-schnorr.git", rev = "cf60802" }
secp256k1 = "0.24.0"
serde = "1.0.145"
sha2 = "0.10.6"
termcolor = "1.1.3"
wasm-bindgen = "0.2.63"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
